# kanta

./: README.md  conf.txt  picofirmware-commands.md
rpi-pico-servo-python/: .env.example  .gitignore  API_EXPORT_SUMMARY.md  LICENSE  Makefile  README.md  alembic.ini  api_documentation.json  api_endpoints.json  api_test_results.json  docker-compose.yml  firmware-management-guide.md  pyproject.toml  requirements.txt  run_api_tests.py  test_collection.json  test_material_endpoint.py  test_mock_servo.py
rpi-pico-servo-python/alembic/: env.py
rpi-pico-servo-python/dodatak/: RPI_PICO2-20260325-v1.28.0-preview.312.g2dc2e30d98.uf2
rpi-pico-servo-python/pico_firmware/: boot.py  main.py  pin_config.py  servo_driver.py
rpi-pico-servo-python/rpi_api/: Dockerfile  __init__.py  config.py  database.py  main.py  models.py  pin_config.py  requirements.txt  servo_service.py
rpi-pico-servo-python/scripts/: deploy.sh  flash_pico.py  init_db.sql  setup.sh  test_material_sequence.py  update_firmware.py  watch_firmware.py
rpi-pico-servo-python/tests/: __init__.py  test_api.py
